--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@
 
 body{
     display: flex ;
+    background-image: url(img/background.jpg);
     color: antiquewhite;
-    /* background-image: url(background.jpg); */
-    /* opacity: 0.5; */
-    background-size:100% 100%;
-    /* height: 100vh; */
+    background-size:cover;
+    position: relative;
+    height: 100vh;
     width: 100vw;
-    background-repeat: no-repeat;
+    /* background:linear-gradient(45deg, #08001f, #30197d ); */
     flex-wrap: wrap;
     align-items: end;
 }
@@ -25,9 +25,10 @@ body{
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    padding: 5% 15%;
-    background: transparent;
+    width: 100vw;
+    height: 30vh;
+    padding: 0px 10% 0px 10%;
+    /* background: transparent; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -92,18 +93,19 @@ body{
 
 
 .home{
-    position: relative;
-    width: 100;
-    height: 100;
+    position: fixed;
+    width: 100vw;
+    height: 70vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 100px 50px 100px 50px;
+    z-index: 100;
 }
 
 .home-content{
     max-width: 650px;
-    
+    height: 70vh;
 }
 
 .home-content h1{
@@ -141,13 +143,13 @@ body{
     animation: slideLeft 1s ease forwards 1s;
 }
 
-.home-img{
+/* .home-img{
     margin: 300px;
-}
+} */
 .home-img img{
     
-    max-width: 450px;
-    margin-right: -20px;
+    height: 50vh;
+    width: 25vw;
     opacity: 0;
     animation: zoomIn 1s ease forwards;
     animation-delay: 2s;
@@ -160,8 +162,8 @@ body{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background: transparent;
     /* border: 2px solid aqua; */
     border-radius: 30%;
